# agent-starter-kit

./: .env.example  .gitignore  README.md  agent.html  agent.py  agent_server.py  browser.sh  candidates.py  chat_client.py  emails.py  format.sh  index.html  jobs.py  json_store.py  mcp_client.py  mcp_server.py  people.html  people.py  people_server.py  pyproject.toml  reset.py  sms.py  start.sh  utils.py  weather.py
